--- a/assets/styles/globe.css
+++ b/assets/styles/globe.css
@@ -14,6 +14,6 @@
     bottom: 0px;
     pointer-events: none;
     z-index: 9999;
-    background: url(../img/loading.gif) no-repeat center;
+    background: url(../img/loading.png) no-repeat center;
     opacity: 1;
 }
