--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,7 +20,9 @@
     <link rel="stylesheet" href="https://use.typekit.net/auw3sxg.css">
 
     {% block stylesheets %}
-        {{ encore_entry_link_tags('app') }}
+{#        {{ encore_entry_link_tags('app') }}#}
+        <link rel="stylesheet" href="https://dev.ographik.fr/reveurdream/css/style.css">
+
     {% endblock %}
 </head>
 
