--- a/templates/pages/why.html.twig
+++ b/templates/pages/why.html.twig
@@ -1,4 +1,5 @@
 {% extends 'base.html.twig' %}
+{% extends 'base.html.twig' %}
 {% block body %}
     <section id="home">
         <div class="wrapper">
@@ -6,9 +7,9 @@
                 <p class="date">29 mars 2022 <img src="{{ asset('build/phase.png') }}"><span>dans l’Hémisphère Nord</span></p>
                 <div class="left-col" id="left-col-pourquoi">
                     <h1>Pourquoi&nbsp;?</h1>
-                    <p>Circa hos dies Lollianus primae lanuginis adulescens, Lampadi filius ex praefecto, exploratius causam Maximino spectante, convictus codicem noxiarum artium nondum per aetatem firmato consilio D
-                        Descripsisse, exulque mittendus, ut sperabatur, patris inpulsu provocavit ad principem, et iussus ad eius comitatum duci, de fumo, ut aiunt, in flammam traditus.
-                        hendant meum consilium, cum ego idem antea multa decreverim, que magis ad hominis dignitatem quam ad rei publicae necessitatem pertinerent? Supplicationem quindecim dierum decrevi sententia mea. Rei publicae satis erat tot dierum quot C. Mario ; dis immortalibus non erat exigua eadem gratulatio qu</p>
+                    <p>Nous sommes intimement convaincus que le rêve peut nous lier à la nature, ainsi qu'à notre environnement social et culturel.<br/>
+                        En partageant nos rêves nous contribuons à la création d'une intelligence collective nouvelle.<br/>
+                        Un artiste français porte l'idée de reveurdream.com, parce qu'il pense que le rêve peut sans doute être une source d'inspiration, de création, comme une muse insondable mais apporter aussi une meilleure compréhension de notre humanité.</p>
                     <a href="{{ url('app_dream') }}" class="blue-button">commencer</a>
                     {% if not app.user %}
                         <p class="account-connection">
