--- a/templates/security/confirmation_email.html.twig
+++ b/templates/security/confirmation_email.html.twig
@@ -1,7 +1,11 @@
 <h2 style="text-align: center;">Création de votre compte Reveurdream</h2> <img
         style="text-align: center; margin: 10px auto;"
-        src="{{ asset('build/logo.png') }}"> <p>Votre compte sur <a href="{{ url('app_index') }}"></a> est créé.</p> <p>
+        src="{{ asset('build/logo.png') }}">
+<p>Bonjour,</p>
+<p>Votre compte sur <a href="{{ url('app_index') }}">{{ url('app_index') }}</a> est créé.</p> <p>
     Pour confirmer votre
-    adresse email et valider votre inscription, merci de cliquer <a href="{{ signedUrl }}">sur ce lien (valable 1
-        heure) </a></p> <p>Nous
+    adresse email et valider votre inscription, merci de cliquer sur <a href="{{ signedUrl }}">ce lien</a></p>
+<p>Nous
     avons hâte de lire votre dernier rêve&nbsp;!</p> <p>A bientôt,<br/> L'équipe reveurdream.com</p>
+
+desisncription
