--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -9,7 +9,7 @@
 
     <section class="postyourdream">
 
-        <div class="wrapper">
+        <div class="wrapper page">
             <!-- Step inscription compte 6b -->
             <div class="dream-phase" id="dream-step-account-creation">
 
