--- a/templates/security/valide.html.twig
+++ b/templates/security/valide.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <section class="postyourdream">
-        <div class="wrapper">
+        <div class="wrapper page">
             <!-- Validation compte 7 -->
             <div class="dream-phase" id="dream-step-account-validation">
                 <h2>Contez votre rêve</h2>
