--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -22,7 +22,7 @@
                             <img class="phase" src="{{ asset('build/phase.png') }}">
                             <span class="dream_date">{{ dream.createdAt|format_datetime('long', 'none', locale=app.request.getLocale()) }}</span>
                             <span class="dream_categories">{% if dream.category %}{{ dream.category.ico|raw }}{% endif %}</span>
-                            <span class="dream_title">{{ dream.title }}u</span>
+                            <span class="dream_title">{{ dream.title }}</span>
                             <span class="dream_invisible">{% if dream.isDraft %} invisible {% else %} visible {% endif %}</span>
                             <span class="dream_views"> | {{ dream.numberView }} vues</span>
                             <a class="dream_edit" href="{{ url('app_dream_edit', {'id' : dream.id}) }}">Editer le
