--- a/templates/pages/_globe.html.twig
+++ b/templates/pages/_globe.html.twig
@@ -3,22 +3,24 @@
 <script src="https://cesium.com/downloads/cesiumjs/releases/1.92/Build/Cesium/Cesium.js"></script>
 <link href="https://cesium.com/downloads/cesiumjs/releases/1.92/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
 
-{% for dream in dreams %}
-    <div class="popup-dream" id="dream-{{ dream.id }}" style="display: none">
+{% for groupes in dreams %}
+    <div class="popup-dream" id="dream-{{ groupes.id }}" style="display: none">
         <div class="overlay">
         </div>
         <div class="popup-dream-text">
-            <div>
-                <p class="popup-dream-text-date">{{ dream.createdAt|format_datetime('long', 'none', locale=app.request.getLocale()) }}</p>
-                <div class="popup-dream-text-icons">
-                    {{ dream.cat_ico|raw }}
-                    {{ dream.theme_ico|raw }}
+            <div class="close-popup">x</div>
+            {% for dream in groupes.dreams %}
+                <div>
+                    <p class="popup-dream-text-date">{{ dream.createdAt|format_datetime('long', 'none', locale=app.request.getLocale()) }}</p>
+                    <div class="popup-dream-text-icons">
+                        {{ dream.cat_ico|raw }}
+                        {{ dream.theme_ico|raw }}
 
+                    </div>
+                    <h2>{{ dream.title }}</h2>
+                    <p>{{ dream.description }}</p>
                 </div>
-                <h2>{{ dream.title }}</h2>
-                <p>{{ dream.description }}</p>
-                <div class="close-popup">x</div>
-            </div>
+            {% endfor %}
         </div>
     </div>
 {% endfor %}
@@ -55,7 +57,18 @@
             </svg>
         </div>
         <div class="filter-box theme" id="perso" title="Personnel">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 383.24 383.26"><g id="a"/><g id="b"><g id="c"><g><path d="M0,134v-8.23c.22-1.09,.57-2.16,.65-3.26C4.16,78.66,43.53,44.66,87.41,47.81c7,.5,13.92,2.01,20.9,3.06C117.39,23.92,135.49,6.15,163.97,1.19c28.47-4.95,51.52,5.68,69.25,28.2,19.07-11.05,38.36-12.15,57.2-.62,18.8,11.51,26.5,29.28,25.49,50.94,2.78,.39,5.12,.68,7.45,1.04,35.05,5.53,60.52,36.48,59.86,72.73-.64,34.63-27.74,64.76-62.09,68.89-2.83,.34-4.18,1.27-5,4.21-11.01,39.53-59.27,53.67-89.98,26.46-.99-.88-2.02-1.73-3.19-2.73-.57,.88-.97,1.48-1.35,2.1-11.1,18.22-27.33,27.72-48.61,28.89-3.37,.18-4.7-.72-5.36-4.17-6.96-36.43-44.71-59.3-80.11-48.27-7.49,2.33-14.42,6.43-21.92,9.85-7.37-6.55-12.56-16.94-13.68-29.02-.25-2.71-1.36-3.75-3.58-4.82-23.51-11.28-38.87-29.46-45.48-54.75C1.49,144.86,.94,139.38,0,134Z"/><path d="M0,352.57c.38-1.03,.79-2.04,1.12-3.08,3.76-11.98,15.19-19.69,27.49-18.54,12.45,1.17,22.35,11.07,23.66,23.67,1.26,12.16-6.55,23.74-18.51,27.5-1.04,.33-2.05,.76-3.07,1.14h-8.98c-5.58-1.83-11.3-3.78-14.81-8.72C4.09,370.58,2.26,365.91,0,361.56v-8.98Z"/><path d="M64.36,289.47c.09-22.65,18.66-41.04,41.33-40.94,22.62,.1,41.09,18.77,40.94,41.38-.15,22.66-18.74,41.05-41.39,40.94-22.64-.11-40.97-18.67-40.88-41.39Z"/></g></g></g></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 383.24 383.26">
+                <g id="a"/>
+                <g id="b">
+                    <g id="c">
+                        <g>
+                            <path d="M0,134v-8.23c.22-1.09,.57-2.16,.65-3.26C4.16,78.66,43.53,44.66,87.41,47.81c7,.5,13.92,2.01,20.9,3.06C117.39,23.92,135.49,6.15,163.97,1.19c28.47-4.95,51.52,5.68,69.25,28.2,19.07-11.05,38.36-12.15,57.2-.62,18.8,11.51,26.5,29.28,25.49,50.94,2.78,.39,5.12,.68,7.45,1.04,35.05,5.53,60.52,36.48,59.86,72.73-.64,34.63-27.74,64.76-62.09,68.89-2.83,.34-4.18,1.27-5,4.21-11.01,39.53-59.27,53.67-89.98,26.46-.99-.88-2.02-1.73-3.19-2.73-.57,.88-.97,1.48-1.35,2.1-11.1,18.22-27.33,27.72-48.61,28.89-3.37,.18-4.7-.72-5.36-4.17-6.96-36.43-44.71-59.3-80.11-48.27-7.49,2.33-14.42,6.43-21.92,9.85-7.37-6.55-12.56-16.94-13.68-29.02-.25-2.71-1.36-3.75-3.58-4.82-23.51-11.28-38.87-29.46-45.48-54.75C1.49,144.86,.94,139.38,0,134Z"/>
+                            <path d="M0,352.57c.38-1.03,.79-2.04,1.12-3.08,3.76-11.98,15.19-19.69,27.49-18.54,12.45,1.17,22.35,11.07,23.66,23.67,1.26,12.16-6.55,23.74-18.51,27.5-1.04,.33-2.05,.76-3.07,1.14h-8.98c-5.58-1.83-11.3-3.78-14.81-8.72C4.09,370.58,2.26,365.91,0,361.56v-8.98Z"/>
+                            <path d="M64.36,289.47c.09-22.65,18.66-41.04,41.33-40.94,22.62,.1,41.09,18.77,40.94,41.38-.15,22.66-18.74,41.05-41.39,40.94-22.64-.11-40.97-18.67-40.88-41.39Z"/>
+                        </g>
+                    </g>
+                </g>
+            </svg>
         </div>
         <div class="filter-box theme" id="travail" title="Travail">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 383.95 319.95">
