--- a/templates/pages/why.html.twig
+++ b/templates/pages/why.html.twig
@@ -19,7 +19,7 @@
             </div>
 
             <div class="right-col">
-                {% include "pages/_globe.html.twig" %}
+                {{ render_esi(path('globe')) }}
             </div>   <!-- right column -->
         </div>
     </section>
