--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -19,7 +19,8 @@
                 </div>
 
                 <div class="right-col">
-                    {% include "pages/_globe.html.twig" %}
+                    {{ render_esi(path('globe')) }}
+
                     <div>
 
                     </div>
