--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -49,7 +49,8 @@
             </div>
 
             <div class="right-col">
-                {% include "pages/_globe.html.twig" %}
+                {{ render_esi(path('globe')) }}
+
 
             </div><!-- Right col -->
     </section>
