--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -49,7 +49,7 @@
             </div>
 
             <div class="right-col">
-                {{ render_esi(path('globe')) }}
+                {% include "pages/_globe.html.twig" %}
 
 
             </div><!-- Right col -->
