--- a/templates/pages/index.html.twig
+++ b/templates/pages/index.html.twig
@@ -18,7 +18,7 @@
             </div>
 
             <div class="right-col">
-                {{ render_esi(path('globe')) }}
+                {% include "pages/_globe.html.twig" %}
             </div>   <!-- right column -->
         </div>
     </section>
