--- a/templates/pages/_footer.html.twig
+++ b/templates/pages/_footer.html.twig
@@ -1,5 +1,5 @@
 <footer>
-    <p>© 2022 Copyright : reveurdream.com</p><span class="divider">|</span><a href="{{ url('app_contact') }}">Contact</a><span class="divider">|</span><a href="{{ url('app_mentions') }}">Mentions légales</a>
+    <p>© 2022 Copyright : reveurdream.com</p><span class="divider">|</span><a href="{{ url('app_contact') }}">Contact</a><span class="divider">|</span><a href="{{ url('app_mentions') }}">{{ 'footer.notice'|trans}}</a>
 </footer>
 
 <script>
