--- a/templates/pages/_globe.html.twig
+++ b/templates/pages/_globe.html.twig
@@ -28,7 +28,7 @@
 <div id="loading-overlay"></div>
 
 <div class="filters-column">
-    <p>Filtrer les rêves</p>
+    <p>{{ 'globe.filter'|trans }}</p>
     <div class="filters-button"><img src="{{ asset('build/filters.png') }}" alt="Icône des filtres de recherche">
     </div>
 </div>
