--- a/templates/pages/contact.html.twig
+++ b/templates/pages/contact.html.twig
@@ -4,6 +4,8 @@
     <section id="single-content">
         <div class="wrapper">
             <h1>Contact</h1>
+            {{ form_start(form) }}
+            {{ form_end(form) }}
         </div>
     </section>
 
