--- a/templates/pages/_header.html.twig
+++ b/templates/pages/_header.html.twig
@@ -4,6 +4,7 @@
                                               alt="Logo Rêveur Dream"></a>
         <nav class="nav-bar">
             <ul>
+                <li><a href="{{ url('app_index') }}">{{ 'header.home'|trans }}</a></li>
                 <li><a href="{{ url('app_why') }}">{{ 'header.why'|trans }}</a></li>
                 {% if not app.user %}
                     <li><a href="{{ url('app_register') }}">{{ 'header.registration'|trans }}</a></li>
