--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -3,9 +3,15 @@
 {% block title %}Me connecter à mon compte{% endblock %}
 
 {% block body %}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
+
     <style>
         #dream-step-account-creation li{
             color: #fff;
+        }
+        form i {
+            margin-left: -30px;
+            cursor: pointer;
         }
     </style>
       {% for flash_error in app.flashes('verify_email_error') %}
@@ -41,4 +47,38 @@
             </div>
         </div>
     </section>
+
+    <script>
+        const password = document.querySelector("#registration_form_password_first");
+        password.insertAdjacentHTML('afterend', '<i class="bi bi-eye-slash" id="togglePassword"></i>')
+
+        const togglePassword = document.querySelector("#togglePassword");
+        togglePassword.addEventListener("click", function () {
+            // toggle the type attribute
+            const type = password.getAttribute("type") === "password" ? "text" : "password";
+            password.setAttribute("type", type);
+
+            // toggle the icon
+            this.classList.toggle("bi-eye");
+        });
+
+        const password2 = document.querySelector("#registration_form_password_second");
+        password2.insertAdjacentHTML('afterend', '<i class="bi bi-eye-slash" id="togglePassword2"></i>')
+
+        const togglePassword2 = document.querySelector("#togglePassword2");
+        togglePassword2.addEventListener("click", function () {
+            // toggle the type attribute
+            const type = password2.getAttribute("type") === "password" ? "text" : "password";
+            password2.setAttribute("type", type);
+
+            // toggle the icon
+            this.classList.toggle("bi-eye");
+        });
+
+        // prevent form submit
+        const form = document.querySelector("form");
+        form.addEventListener('submit', function (e) {
+            e.preventDefault();
+        });
+    </script>
 {% endblock %}
